--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <body>
         <header>
           <h1 class="centered">NASA</h1>
-          <img src="https://images-assets.nasa.gov/image/as11-44-6550/as11-44-6550~medium.jpg" alt="earthrise">
-          </div>
+          <img src="https://images-assets.nasa.gov/image/as11-44-6550/as11-44-6550~medium.jpg" alt="earthrise"> 
+        
         </header>
   
         <main>
           <article>
             <h2>SOCIAL MEDIA</h2>
+          </article>
           <article>
             <h2>OFFICE INFO</h2> 
           </article>
