--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="icons">
                   <img src="Facebook.png" alt="facebook icon">
                   <img src="Twitter.png" alt="twitter icon">
-                  <img src="youtube.png" alt="youtube icon">
+                  <img src="YouTube.png" alt="youtube icon">
                   <img src="Instagram.png" alt="instagram icon">
                 </div>
                 </section>
