--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main>
           <article class="contact-stuff">
             <h2>SOCIAL MEDIA</h2>
-            <div class="input">
+            <div>
               <section>
                 <section>
                   <h3>Facebook - fb.com/nasa 
@@ -45,9 +45,9 @@
                     <p>Washington DC 20546</p>
                     <p>(202) 358-0001 (Office)</p>
                     <p>(202) 358-4338 (Fax) </p>
-                </h3>
+                  </h3>
               </section> 
-            </div>
+            
           </article>
           <article class="contact-stuff"> 
             <h2>CONTACT US</h2>
